--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,6 +1,16 @@
 @import '@/assets/styles/_variables.scss';
+@import '@/assets/styles/_mixins.scss';
 
-body {
+* {
   margin: 0;
+  padding: 0;
+  outline: 0;
+  box-sizing: border-box;
+}
+
+html, body, #app {
+  min-height: 100%;
+  height: 100%;
   background-color: $app-background;
+  font-family: Helvetica, Arial, sans-serif;
 }
