--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -9,8 +9,7 @@
 }
 
 html, body, #app {
-  min-height: 100%;
-  height: 100%;
+  @include fullHeight;
   background-color: $app-background;
   font-family: Helvetica, Arial, sans-serif;
 }
