Configuracao da API e ajustes gerais

--- a/src/assets/styles/_mixins.scss
+++ b/src/assets/styles/_mixins.scss
@@ -1,6 +1,6 @@
 @mixin card__temperature() {
   font-size: 5em;
-  padding: 1.25rem 0 1.25rem 0;
+  padding: $lg-size 0 $lg-size 0;
 }
 
 @mixin fullHeight() {
