--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -9,3 +9,12 @@ $red: #ed1946;
 $dark: #737c84;
 $grey: #b4b4b4;
 $white: #ffffff;
+
+$xxs-size: 0.625rem;
+$xs-size: 0.750rem;
+$sm-size: 0.875rem;
+$md-size: 1rem;
+$lg-size: 1.125rem;
+$xl-size: 1.250rem;
+$xl2-size: 1.5rem;
+$xl3-size: 1.875rem;
