Removed allias src

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,5 +1,5 @@
-@import '@/assets/styles/_variables.scss';
-@import '@/assets/styles/_mixins.scss';
+@import './_variables.scss';
+@import './_mixins.scss';
 
 * {
   margin: 0;
